--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </section>
     <footer>
-        <div class="text-center">copyright@美啦<i class="fa fa-wechat" aria-hidden="true"></i></div>
+        <div class="text-center">copyright@a美啦<i class="fa fa-wechat" aria-hidden="true"></i></div>
     </footer>
 </body>
 <script type="text/javascript">
@@ -66,6 +66,6 @@ window.addEventListener('DOMContentLoaded', function() {
     document.documentElement.className = document.documentElement.className.replace('nojs', 'js');
 });
 </script>
-<script src="../resource/index.js"></script>
+<script src="./resource/index.js"></script>
 
 </html>
