--- a/index.html
+++ b/index.html
@@ -6,67 +6,25 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Vue Document</title>
     <style type="text/css">
-    .nojs {
-        display: none;
-    }
+        .nojs {
+            display: none;
+        }
     </style>
 </head>
 
-<body id="main">
-    <!-- 顶部导航组件 -->
-    <my-header></my-header>
-    <section id="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    <h1>左侧导航</h1>
-                    <ul class="list-group">
-                        <li class="list-group-item">Item 1</li>
-                        <li class="list-group-item">Item 2</li>
-                        <li class="list-group-item">Item 3</li>
-                        <li class="list-group-item">Item 1</li>
-                        <li class="list-group-item">Item 2</li>
-                        <li class="list-group-item">Item 3</li>
-                    </ul>
-                </div>
-                <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                    <div id="app">
-                        <h1>Hello， 卖家中心！</h1>
-                        <!-- 路由视图 -->
-                        <router-view></router-view>
-                    </div>
-                    <!-- 多组件复用 -->
-                    <comps></comps>
-                    <!-- 数据填充模板 -->
-                    <table class="table table-hover" id="boot">
-                        <thead>
-                            <tr>
-                                <th v-for="title in titles">{{title}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="item in items">
-                                <td v-for="i in item">{{i}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <ul class="pager">
-                        <li><a href="#">Previous</a></li>
-                        <li><a href="#">Next</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <div class="text-center">copyright@a美啦<i class="fa fa-wechat" aria-hidden="true"></i></div>
-    </footer>
-</body>
-<script type="text/javascript">
-window.addEventListener('DOMContentLoaded', function() {
-    document.documentElement.className = document.documentElement.className.replace('nojs', 'js');
-});
-</script>
-<script src="./resource/index.js"></script>
+<body>
+    <app-header></app-header>
+    <div id="app">
+        <router-view></router-view>
+    </div>
+    <app-footer></app-footer>
 
+    <script type="text/javascript">
+        window.addEventListener('DOMContentLoaded', function() {
+            document.documentElement.className = document.documentElement.className.replace('nojs', 'js');
+        });
+    </script>
+    <script src="./common.js"></script>
+    <script src="./index.js"></script>
+</body>
 </html>
