--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         .nojs {
             display: none;
         }
+        body {
+            height: 1000px;
+        }
     </style>
 </head>
 
